# alexandria

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
alexandria-app/: Package.swift
alexandria-app/Sources/Alexandria/: AppDelegate.swift  Info.plist  Ingester.swift  SearchEngine.swift  SearchPanel.swift  SearchView.swift  SearchViewModel.swift  Settings.swift  SettingsView.swift  alexandria_core.swift  alexandria_coreFFI.h
alexandria-app/Sources/alexandria_coreFFI/: alexandria_coreFFI.h
crates/alexandria-cli/: Cargo.toml
crates/alexandria-cli/src/: main.rs
crates/alexandria-core/: Cargo.toml  build.rs
crates/alexandria-core/examples/: filter-html.rs
crates/alexandria-core/src/: extract.rs  ffi.rs  filter.rs  index.rs  ingest.rs  lib.rs  page_store.rs  power.rs  queue.rs  search.rs
crates/alexandria-native-host/: Cargo.toml
crates/alexandria-native-host/src/: main.rs  protocol.rs
crates/browser-native-host/: Cargo.toml
crates/browser-native-host/src/: main.rs  protocol.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: app_db.rs  blocklist.rs  extract.rs  ffi.rs  filter.rs  index.rs  ingest.rs  lib.rs  page_store.rs  search.rs
crates/core/tests/: ingest_search_integration.rs
docs/: VISION.md  roadmap.md
docs/api/: cli-reference.md  rust-public-api.md
docs/architecture/: README.md  data-model.md  ffi.md  ingestion.md  power-management.md  search.md
docs/guides/: development-setup.md
extension/: README.md  background.js  content.js  manifest.json  md5.js  options.html  options.js  rules.js
macos/: Package.swift  README.md
macos/Sources/Alexandria/: AlexandriaApp.swift  AppDelegate.swift  IngestLogView.swift  Ingester.swift  NativeHostInstaller.swift  SearchEngine.swift  SearchPanel.swift  SearchView.swift  SearchViewModel.swift  Settings.swift  SettingsView.swift  StatisticsView.swift  alexandria_core.swift  alexandria_coreFFI.h  alexandria_coreFFI.modulemap
macos/Sources/alexandria_coreFFI/: alexandria_coreFFI.h
shared/: blocklist.json  generate_rules.py
