[workspace]
members = ["crates/core", "crates/cli", "crates/browser-native-host"]
resolver = "2"

[workspace.dependencies]
tantivy = "0.22"
notify = "7"
htmd = "0.5"
markdown_to_text = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
scraper = "0.25"
uniffi = { version = "0.28", features = ["cli"] }
rusqlite = { version = "0.38", features = ["bundled"] }
zstd = "0.13"
