[package]
name = "alexandria-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "alex"
path = "src/main.rs"

[dependencies]
alexandria-core = { path = "../alexandria-core" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
serde_json = { workspace = true }
