[package]
name = "alexandria-native-host"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "alexandria-native-host"
path = "src/main.rs"

[dependencies]
alexandria-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
