[package]
name = "alexandria-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tantivy = { workspace = true }
notify = { workspace = true }
htmd = { workspace = true }
markdown_to_text = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
uniffi = { workspace = true }
rusqlite = { workspace = true }
xxhash-rust = { workspace = true }
zstd = { workspace = true }


[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[example]]
name = "filter-html"
